--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,10 @@ body {
   height: 100vh;
   background: rgb(34, 193, 195);
   background: linear-gradient(0deg, rgba(34, 193, 195, 1) 0%, rgba(253, 187, 45, 1) 100%);
-  overflow: hidden;
 }
 
 .tiltComponent {
-  width: 200px;
+  max-width: 300px;
   height: 200px;
   background: blueviolet;
   display: flex;
