--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,8 @@ body {
 }
 
 .tiltComponent {
-  max-width: 300px;
-  height: 200px;
+  max-width: 100%;
+  height: 100%;
   background: blueviolet;
   display: flex;
   justify-content: center;
@@ -18,4 +18,5 @@ body {
   color: white;
   font-size: 24px;
   padding: 10px;
+  overflow: auto;
 }
