--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,18 @@
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100vh;
-  background: rgb(34, 193, 195);
-  background: linear-gradient(0deg, rgba(34, 193, 195, 1) 0%, rgba(253, 187, 45, 1) 100%);
+  width:100%;
+  height:100vh;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  background-color:black;
+ } 
+
+.wrapper {
+  perspective: 15px;
 }
 
-.tiltComponent {
-  max-width: 100%;
-  height: 100%;
-  background: blueviolet;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  font-size: 24px;
-  padding: 10px;
-  overflow: auto;
+#tiltable {
+  height:400px;
+  transition: transform 0.5s;
+  backface-visibility: hidden;
 }
