--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,25 @@
-body {
-  width:100%;
-  height:100vh;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  background-color:black;
- } 
-
-.wrapper {
-  perspective: 15px;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.tilt {
-  width: 100px;
-  height:400px;
-  background: white;
-  transition: transform 0.5s;
-  backface-visibility: hidden;
+.wrapper {
+  background-color: black;
+}
+
+.text-clip {
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(0deg, rgba(61,174,235,1) 0%, rgba(253,45,79,1) 100%);
+  transition: 0.4s;
+  font-size: 52px;
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  text-transform: uppercase;
+
 }
